Completed game logic

--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,12 @@
         <img src="src/images/car2.png" alt="Red car" id="car2" class="car">
     </div>
 
-    <div id="raceInfoContainer" class="clearfix">
+    <div id="raceInfoContainer">
         <h2 id="raceInfoContainer__title">Results</h2>
-        <div id="raceInfoContainer__raceInfo1" class="raceInfo">Car 1<span></span></div>
-        <div id="raceInfoContainer__raceInfo2" class="raceInfo">Car 2<span></span></div>
+        <div class='flex-container'>
+          <div id="raceInfoContainer__raceInfo1" class="raceInfo">Car 1<span></span></div>
+          <div id="raceInfoContainer__raceInfo2" class="raceInfo">Car 2<span></span></div>
+        </div>
     </div>
 
   <!-- build:js assets/scripts/app.js -->
